--- a/ui/src/app/connect/data-marketplace/data-marketplace.component.css
+++ b/ui/src/app/connect/data-marketplace/data-marketplace.component.css
@@ -36,6 +36,10 @@
   min-height: calc(100vh - 70px);
 }
 
+.pl-5 {
+  padding-left:5px;
+}
+
 .box {
   width: 200px; height: 300px;
   position: relative;
