--- a/ui/src/app/core-ui/static-properties/static-free-input/static-free-input.component.scss
+++ b/ui/src/app/core-ui/static-properties/static-free-input/static-free-input.component.scss
@@ -16,9 +16,14 @@
  *
  */
 
-@import '../../../../scss/sp/buttons';
+@import 'src/scss/sp/colors';
+
+#formWrapper {
+    height: 60px;
+}
 
 p {
+    width: 100px;
     float: left;
     margin: 20px  15px 0 0;
 }
@@ -26,7 +31,7 @@ form {
     float: left;
 }
 
-.description {
-    font-size: 10px;
+::ng-deep.mat-accent ::ng-deep.mat-slider-track-fill, .mat-accent ::ng-deep.mat-slider-thumb, .mat-accent ::ng-deep.mat-slider-thumb-label {
+    background-color: $sp-color-accent;
 }
 
