--- a/ui/src/app/connect/dialog/adapter-export/adapter-export-dialog.component.scss
+++ b/ui/src/app/connect/dialog/adapter-export/adapter-export-dialog.component.scss
@@ -16,28 +16,16 @@
  *
  */
 
-import {Component, EventEmitter, Input, OnInit, Output} from '@angular/core';
-import {DataTypesService} from '../../../../services/data-type.service';
+@import 'src/scss/sp/sp-dialog';
 
-@Component({
-  selector: 'sp-edit-data-type',
-  templateUrl: './edit-data-type.component.html',
-  styleUrls: ['./edit-data-type.component.css']
-})
-export class EditDataTypeComponent implements OnInit {
+.code-container {
+    position: relative;
+}
 
-  @Input() cachedProperty: any;
-  @Output() dataTypeChanged = new EventEmitter<boolean>();
-
-  runtimeDataTypes;
-  constructor(private dataTypeService: DataTypesService) { }
-
-  ngOnInit() {
-    this.runtimeDataTypes = this.dataTypeService.getDataTypes();
-  }
-
-  valueChanged() {
-    this.dataTypeChanged.emit(true);
-  }
-
+.download-icon {
+    cursor: pointer;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
 }
