--- a/ui/src/app/connect/dialog/adapter-upload/adapter-upload-dialog.component.scss
+++ b/ui/src/app/connect/dialog/adapter-upload/adapter-upload-dialog.component.scss
@@ -16,28 +16,5 @@
  *
  */
 
-import {Component, EventEmitter, Input, OnInit, Output} from '@angular/core';
-import {DataTypesService} from '../../../../services/data-type.service';
+@import 'src/scss/sp/sp-dialog';
 
-@Component({
-  selector: 'sp-edit-data-type',
-  templateUrl: './edit-data-type.component.html',
-  styleUrls: ['./edit-data-type.component.css']
-})
-export class EditDataTypeComponent implements OnInit {
-
-  @Input() cachedProperty: any;
-  @Output() dataTypeChanged = new EventEmitter<boolean>();
-
-  runtimeDataTypes;
-  constructor(private dataTypeService: DataTypesService) { }
-
-  ngOnInit() {
-    this.runtimeDataTypes = this.dataTypeService.getDataTypes();
-  }
-
-  valueChanged() {
-    this.dataTypeChanged.emit(true);
-  }
-
-}
