--- a/ui/src/app/core-ui/static-properties/static-group/static-group.component.html
+++ b/ui/src/app/core-ui/static-properties/static-group/static-group.component.html
@@ -34,8 +34,13 @@
     <ng-container *ngFor="let property of staticProperty.staticProperties; let i = index">
         <span *ngIf="i > 0" style="margin-left: 10px;"></span>
         <app-static-property
-                [adapterId]="adapterId" [staticProperties]="staticProperties" [eventSchemas]="eventSchemas"
-                [staticProperty]="property" (validateEmitter)="valueChange($event)" class="test fullWidth">
+                [adapterId]="adapterId"
+                [parentForm]="parentForm"
+                [staticProperties]="staticProperties"
+                [fieldName]="property.internalName"
+                [eventSchemas]="eventSchemas"
+                [staticProperty]="property"
+                (validateEmitter)="valueChange($event)" class="test fullWidth">
         </app-static-property>
     </ng-container>
 
