[STREAMPIPES-208] Add mapping property support for collections to SDK and UI

--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -97,6 +97,8 @@
 
             <app-static-mapping-nary *ngIf="isMappingNaryProperty(staticProperty)"
                                      [eventSchemas]="eventSchemas"
+                                     [parentForm]="parentForm"
+                                     [fieldName]="fieldName"
                                      [staticProperty]="staticProperty"
                                      [displayRecommended]="displayRecommended"
                                      (inputEmitter)="valueChange($event)">
@@ -126,6 +128,7 @@
                                    [adapterId]="adapterId"
                                    [eventSchemas]="eventSchemas"
                                    [parentForm]="parentForm"
+                                   [displayRecommended]="displayRecommended"
                                    [staticProperty]="staticProperty" class="test fullWidth"
                                    (updateEmitter)="emitUpdate($event)">
             </app-static-collection>
