--- a/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
@@ -44,7 +44,7 @@
                         info
                     </span></button>
                         <mat-menu #aboveMenu="matMenu" yPosition="above">
-                                <p><em>{{imageDescription}}</em></p>
+                                <p><em>The Description of the selected image</em></p>
                         </mat-menu>
                     
                 </div>
