--- a/ui/src/app/core-ui/image/image-viewer/image-viewer.component.html
+++ b/ui/src/app/core-ui/image/image-viewer/image-viewer.component.html
@@ -20,20 +20,21 @@
     <div fxLayout="column" fxLayoutAlign="space-between " >
         <div  fxLayout="row" fxLayoutAlign="space-around start">
             <div fxLayout="column" fxLayoutAlign="space-between " >
-                <sp-image-container
-                        [imageSrc]="imagesSrcs[imagesIndex]">
+                <sp-image-container *ngIf="imagesRoutes.length > 0"
+                        [imageSrc]="imagesRoutes[imagesIndex]">
                 </sp-image-container>
             </div>
         </div>
         <br />
-        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>
+
+<!--        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>-->
         <sp-image-bar style="width: 100%"
-                      [imagesSrcs]="imagesSrcs"
+                      [imagesSrcs]="imagesRoutes"
                       [selectedIndex]="imagesIndex"
                       [enableShortCuts]="true"
-                      (indexChange)="handleImageIndexChange($event)"
-                      (pageUp)="handleImagePageUp($event)"
-                      (pageDown)="handleImagePageDown($event)">
+                      (indexChange)="handleImageIndexChange($event)">
+<!--                      (pageUp)="handleImagePageUp($event)"-->
+<!--                      (pageDown)="handleImagePageDown($event)">-->
         </sp-image-bar>
     </div>
 </div>
