--- a/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
+++ b/ui/src/app/core-ui/image/image-categorize/image-categorize.component.html
@@ -46,14 +46,14 @@
             </div>
         </div>
         <br />
-        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>
-        <sp-image-bar style="width: 100%"
-                      [imagesSrcs]="imagesSrcs"
-                      [selectedIndex]="imagesIndex"
-                      [enableShortCuts]="true"
-                      (indexChange)="handleImageIndexChange($event)"
-                      (pageUp)="handleImagePageUp($event)"
-                      (pageDown)="handleImagePageDown($event)">
-        </sp-image-bar>
+<!--        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>-->
+<!--        <sp-image-bar style="width: 100%"-->
+<!--                      [imagesSrcs]="imagesSrcs"-->
+<!--                      [selectedIndex]="imagesIndex"-->
+<!--                      [enableShortCuts]="true"-->
+<!--                      (indexChange)="handleImageIndexChange($event)"-->
+<!--                      (pageUp)="handleImagePageUp($event)"-->
+<!--                      (pageDown)="handleImagePageDown($event)">-->
+<!--        </sp-image-bar>-->
     </div>
 </div>
