--- a/ui/src/app/core-ui/image/image-viewer/image-viewer.component.html
+++ b/ui/src/app/core-ui/image/image-viewer/image-viewer.component.html
@@ -29,7 +29,7 @@
 
 <!--        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>-->
         <sp-image-bar style="width: 100%"
-                      [imagesSrcs]="imagesRoutes"
+                      [imagesRoutes]="imagesRoutes"
                       [selectedIndex]="imagesIndex"
                       [enableShortCuts]="true"
                       (indexChange)="handleImageIndexChange($event)">
