--- a/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling.component.html
@@ -21,64 +21,64 @@
     <div fxLayout="column" fxLayoutAlign="space-between " >
         <div  fxLayout="row" fxLayoutAlign="space-around start">
 
-            <sp-image-labels style="width: 270px"
-                    [labels]="labels"
-                    [enableShortCuts]="isHoverComponent"
-                    (labelChange)="handleLabelChange($event)">
-            </sp-image-labels>
+<!--            <sp-image-labels style="width: 270px"-->
+<!--                    [labels]="labels"-->
+<!--                    [enableShortCuts]="isHoverComponent"-->
+<!--                    (labelChange)="handleLabelChange($event)">-->
+<!--            </sp-image-labels>-->
 
-            <div fxLayout="column" fxLayoutAlign="space-between " >
-                <div style="display: flex; position: relative">
-                    <button mat-button matTooltip="Edit Annotations"
-                            (click)="labelingMode.setNoneMode()" [style.background-color]="labelingMode.isNoneMode() ? 'lightgrey' : 'white'"> <mat-icon>create</mat-icon></button>
-                    <button mat-button matTooltip="Create React Annotation"
-                            (click)="labelingMode.setReactMode()" [style.background-color]="labelingMode.isReactMode() ? 'lightgrey' : 'white'"> <mat-icon>crop_3_2</mat-icon></button>
-                    <button mat-button matTooltip="Create Polygon Annotation"
-                            (click)="labelingMode.setPolygonMode()" [style.background-color]="labelingMode.isPolygonMode() ? 'lightgrey' : 'white'"> <mat-icon>details</mat-icon></button>
-                    <button mat-button matTooltip="Create Brush Annotation"
-                            (click)="labelingMode.setBrushMode()" [style.background-color]="labelingMode.isBrushMode() ? 'lightgrey' : 'white'"> <mat-icon>blur_circular</mat-icon></button>
-                    <mat-slider [min]="1"  [max]="50" [step]="1" [thumbLabel]="true" [(ngModel)]="brushSize"></mat-slider>
-                    <button mat-button (click)="save()" style="position: absolute; right: 0px;"> <mat-icon>save</mat-icon></button>
-                    <button mat-button matTooltip="Description" [matMenuTriggerFor]="aboveMenu">
-                            <span class="material-icons">
-                        info
-                    </span></button>
-                        <mat-menu #aboveMenu="matMenu" yPosition="above">
-                                <p><em>The Description of the selected image</em></p>
-                        </mat-menu>
-                    
-                </div>
+<!--            <div fxLayout="column" fxLayoutAlign="space-between " >-->
+<!--                <div style="display: flex; position: relative">-->
+<!--                    <button mat-button matTooltip="Edit Annotations"-->
+<!--                            (click)="labelingMode.setNoneMode()" [style.background-color]="labelingMode.isNoneMode() ? 'lightgrey' : 'white'"> <mat-icon>create</mat-icon></button>-->
+<!--                    <button mat-button matTooltip="Create React Annotation"-->
+<!--                            (click)="labelingMode.setReactMode()" [style.background-color]="labelingMode.isReactMode() ? 'lightgrey' : 'white'"> <mat-icon>crop_3_2</mat-icon></button>-->
+<!--                    <button mat-button matTooltip="Create Polygon Annotation"-->
+<!--                            (click)="labelingMode.setPolygonMode()" [style.background-color]="labelingMode.isPolygonMode() ? 'lightgrey' : 'white'"> <mat-icon>details</mat-icon></button>-->
+<!--                    <button mat-button matTooltip="Create Brush Annotation"-->
+<!--                            (click)="labelingMode.setBrushMode()" [style.background-color]="labelingMode.isBrushMode() ? 'lightgrey' : 'white'"> <mat-icon>blur_circular</mat-icon></button>-->
+<!--                    <mat-slider [min]="1"  [max]="50" [step]="1" [thumbLabel]="true" [(ngModel)]="brushSize"></mat-slider>-->
+<!--                    <button mat-button (click)="save()" style="position: absolute; right: 0px;"> <mat-icon>save</mat-icon></button>-->
+<!--                    <button mat-button matTooltip="Description" [matMenuTriggerFor]="aboveMenu">-->
+<!--                            <span class="material-icons">-->
+<!--                        info-->
+<!--                    </span></button>-->
+<!--                        <mat-menu #aboveMenu="matMenu" yPosition="above">-->
+<!--                                <p><em>The Description of the selected image</em></p>-->
+<!--                        </mat-menu>-->
+<!--                    -->
+<!--                </div>-->
 
-                <sp-image-container
-                        [imageSrc]="imagesSrcs[imagesIndex]"
-                        (childRedraw)="handleChildRedraw($event[0], $event[1])"
-                        (mouseDownLeft)="handleMouseDownLeft($event[0], $event[1], $event[2])"
-                        (mouseMove)="handleMouseMove($event[0], $event[1], $event[2])"
-                        (mouseMoveLeft)="handleMouseMoveLeft($event[0], $event[1], $event[2])"
-                        (mouseUpLeft)="handleMouseUpLeft($event[0], $event[1], $event[2], $event[3])"
-                        (shortCut)="handleImageViewShortCuts($event)"
-                        (dbclick)="handleImageViewDBClick($event[0], $event[1], $event[2])"
-                        (mouseDownRight)="handleMouseDownRight($event[0], $event[1], $event[2])"
-                        (isDrawing)="handleIsDrawing($event)">
-                </sp-image-container>
-            </div>
+<!--                <sp-image-container-->
+<!--                        [imageSrc]="imagesSrcs[imagesIndex]"-->
+<!--                        (childRedraw)="handleChildRedraw($event[0], $event[1])"-->
+<!--                        (mouseDownLeft)="handleMouseDownLeft($event[0], $event[1], $event[2])"-->
+<!--                        (mouseMove)="handleMouseMove($event[0], $event[1], $event[2])"-->
+<!--                        (mouseMoveLeft)="handleMouseMoveLeft($event[0], $event[1], $event[2])"-->
+<!--                        (mouseUpLeft)="handleMouseUpLeft($event[0], $event[1], $event[2], $event[3])"-->
+<!--                        (shortCut)="handleImageViewShortCuts($event)"-->
+<!--                        (dbclick)="handleImageViewDBClick($event[0], $event[1], $event[2])"-->
+<!--                        (mouseDownRight)="handleMouseDownRight($event[0], $event[1], $event[2])"-->
+<!--                        (isDrawing)="handleIsDrawing($event)">-->
+<!--                </sp-image-container>-->
+<!--            </div>-->
 
-            <sp-image-annotations style="width: 270px"
-                    [annotations]="this.cocoFiles[this.imagesIndex]?.annotations"
-                    [labels]="labels"
-                    (changeAnnotationLabel)="handleChangeAnnotationLabel($event)"
-                    (deleteAnnotation)="handleDeleteAnnotation($event)">
-            </sp-image-annotations>
-        </div>
-        <br />
-        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>
-        <sp-image-bar style="width: 100%"
-                [imagesSrcs]="imagesSrcs"
-                [selectedIndex]="imagesIndex"
-                [enableShortCuts]="isHoverComponent"
-                (indexChange)="handleImageIndexChange($event)"
-                (pageUp)="handleImagePageUp($event)"
-                (pageDown)="handleImagePageDown($event)">
-        </sp-image-bar>
+<!--            <sp-image-annotations style="width: 270px"-->
+<!--                    [annotations]="this.cocoFiles[this.imagesIndex]?.annotations"-->
+<!--                    [labels]="labels"-->
+<!--                    (changeAnnotationLabel)="handleChangeAnnotationLabel($event)"-->
+<!--                    (deleteAnnotation)="handleDeleteAnnotation($event)">-->
+<!--            </sp-image-annotations>-->
+<!--        </div>-->
+<!--        <br />-->
+<!--        <div fxLayout="row" fxLayoutAlign="center center"><div>{{pageIndex + 1}} / {{pageSum}}</div></div>-->
+<!--        <sp-image-bar style="width: 100%"-->
+<!--                [imagesSrcs]="imagesSrcs"-->
+<!--                [selectedIndex]="imagesIndex"-->
+<!--                [enableShortCuts]="isHoverComponent"-->
+<!--                (indexChange)="handleImageIndexChange($event)"-->
+<!--                (pageUp)="handleImagePageUp($event)"-->
+<!--                (pageDown)="handleImagePageDown($event)">-->
+<!--        </sp-image-bar>-->
     </div>
 </div>
