Remove css form html code in image bar

--- a/ui/src/app/core-ui/image/components/image-bar/image-bar.component.css
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar.component.css
@@ -20,3 +20,11 @@
     height: 70px;
     width: 1000px;
 }
+
+.imagePreview {
+    height: 65px
+}
+
+.imageFocus {
+    border: 5px solid #39b54a
+}
