--- a/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
@@ -19,38 +19,33 @@
 <div fxLayout="row" fxLayoutAlign="center center"><div>{{selectedIndex + 1}} / {{maxImages}}</div></div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center" >
-    <button mat-icon-button (click)="nextPage()"> <mat-icon>skip_previous</mat-icon></button>
+    <button mat-icon-button (click)="goToStart()"> <mat-icon>skip_previous</mat-icon></button>
     <button mat-icon-button (click)="nextImage()"> <mat-icon>keyboard_arrow_left</mat-icon></button>
-
-<!--    <div fxLayout="row" fxLayoutAlign="center " class="imageBar">-->
-<!--        <img *ngFor="let src of _imageRoutes; let i = index" src="{{this.restService.getImageUrl(src)}}" (click)="changeImage(i)"-->
-<!--             [style.border]="i == selectedIndex ? '5px solid #39b54a' : 'none'" style="height: 65px">-->
-<!--    </div>-->
 
     <div fxLayout="row" fxLayoutAlign="center center"  class="imageBar">
         <div fxFlex="40" fxLayoutAlign="end center">
-            <img *ngIf="selectedIndex >= 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 3])}}" (click)="changeImage(selectedIndex - 3)" style="height: 65px">
-            <img *ngIf="selectedIndex >= 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 2])}}" (click)="changeImage(selectedIndex - 2)" style="height: 65px">
-            <img *ngIf="selectedIndex >= 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 1])}}" (click)="changeImage(selectedIndex - 1)" style="height: 65px">
+            <img class="imagePreview" *ngIf="selectedIndex >= 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 3])}}" (click)="changeImage(selectedIndex - 3)">
+            <img class="imagePreview" *ngIf="selectedIndex >= 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 2])}}" (click)="changeImage(selectedIndex - 2)">
+            <img class="imagePreview" *ngIf="selectedIndex >= 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 1])}}" (click)="changeImage(selectedIndex - 1)">
         </div>
 
         <div fxFlex="20">
             <div fxLayout="row" fxLayoutAlign="center">
-                <img  src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex])}}" (click)="changeImage(3)" style="border: '5px solid #39b54a'; height: 65px">
+            <img class="imagePreview imageFocus" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex])}}" (click)="changeImage(3)">
             </div>
         </div>
 
         <div fxFlex="40">
             <div fxLayout="row" fxLayoutAlign="start center">
-                <img *ngIf="selectedIndex < maxImages - 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 1])}}" (click)="changeImage(selectedIndex + 1)" style="height: 65px">
-                <img *ngIf="selectedIndex < maxImages - 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 2])}}" (click)="changeImage(selectedIndex + 2)" style="height: 65px">
-                <img *ngIf="selectedIndex < maxImages - 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 3])}}" (click)="changeImage(selectedIndex + 3)" style="height: 65px">
+                <img class="imagePreview" *ngIf="selectedIndex < maxImages - 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 1])}}" (click)="changeImage(selectedIndex + 1)">
+                <img class="imagePreview" *ngIf="selectedIndex < maxImages - 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 2])}}" (click)="changeImage(selectedIndex + 2)">
+                <img class="imagePreview" *ngIf="selectedIndex < maxImages - 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 3])}}" (click)="changeImage(selectedIndex + 3)">
             </div>
         </div>
     </div>
 
 
     <button mat-icon-button (click)="previousImage()"> <mat-icon>keyboard_arrow_right</mat-icon></button>
-    <button mat-icon-button (click)="previousPage()"> <mat-icon>skip_next</mat-icon></button>
+    <button mat-icon-button (click)="goToEnd()"> <mat-icon>skip_next</mat-icon></button>
 
 </div>
