[STREAMPIPES-107] Fix image widget in data explorer

--- a/ui/src/app/app-image-labeling/app-image-labeling.component.html
+++ b/ui/src/app/app-image-labeling/app-image-labeling.component.html
@@ -30,6 +30,6 @@
     </div>
 
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
-        <sp-image-labeling [measureName]="selectedMeasure?.measureName" [eventSchema]="selectedMeasure?.eventSchema"></sp-image-labeling>
+        <sp-image-labeling [measureName]="selectedMeasure?.measureName"></sp-image-labeling>
     </div>
 </div>
