--- a/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar.component.html
@@ -24,14 +24,13 @@
 
     <div fxLayout="row" fxLayoutAlign="center center"  class="imageBar">
         <div fxFlex="40" fxLayoutAlign="end center">
-            <img class="imagePreview" *ngIf="selectedIndex >= 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 3])}}" (click)="changeImage(selectedIndex - 3)">
             <img class="imagePreview" *ngIf="selectedIndex >= 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 2])}}" (click)="changeImage(selectedIndex - 2)">
             <img class="imagePreview" *ngIf="selectedIndex >= 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex - 1])}}" (click)="changeImage(selectedIndex - 1)">
         </div>
 
         <div fxFlex="20">
             <div fxLayout="row" fxLayoutAlign="center">
-            <img class="imagePreview imageFocus" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex])}}" (click)="changeImage(3)">
+            <img class="imagePreview imageFocus" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex])}}" (click)="changeImage(selectedIndex)">
             </div>
         </div>
 
@@ -39,7 +38,6 @@
             <div fxLayout="row" fxLayoutAlign="start center">
                 <img class="imagePreview" *ngIf="selectedIndex < maxImages - 1" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 1])}}" (click)="changeImage(selectedIndex + 1)">
                 <img class="imagePreview" *ngIf="selectedIndex < maxImages - 2" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 2])}}" (click)="changeImage(selectedIndex + 2)">
-                <img class="imagePreview" *ngIf="selectedIndex < maxImages - 3" src="{{this.restService.getImageUrl(_imageRoutes[selectedIndex + 3])}}" (click)="changeImage(selectedIndex + 3)">
             </div>
         </div>
     </div>
