--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -22,6 +22,7 @@
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
                 <mat-tab label="Pipeline Element Configuration"></mat-tab>
                 <mat-tab label="Messaging"></mat-tab>
+                <mat-tab label="DataLake"></mat-tab>
             </mat-tab-group>
         </div>
     </div>
@@ -31,5 +32,8 @@
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 1">
         <messaging-configuration fxFlex="100"></messaging-configuration>
+    </div>
+    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 2">
+        <sp-datalake-configuration fxFlex="100"></sp-datalake-configuration>
     </div>
 </div>
