start to make a responsive canvas for the data explorer

--- a/ui/src/app/core-ui/image/components/image-bar/image-bar.component.css
+++ b/ui/src/app/core-ui/image/components/image-bar/image-bar.component.css
@@ -18,11 +18,11 @@
 
 .imageBar {
     height: 70px;
-    width: 1000px;
+    /*width: 640px;*/
 }
 
 .imagePreview {
-    height: 65px
+    /*height: 65px*/
 }
 
 .imageFocus {
