[STREAMPIPES-208] Use mapping properties and groups in collections

--- a/ui/src/app/core-ui/static-properties/static-collection/static-collection.component.html
+++ b/ui/src/app/core-ui/static-properties/static-collection/static-collection.component.html
@@ -22,6 +22,7 @@
             <app-static-property [adapterId]="adapterId"
                                  [eventSchemas]="eventSchemas"
                                  [parentForm]="parentForm"
+                                 [showBorder]="false"
                                  [fieldName]="property.internalName + '-' + i"
                                  [staticProperty]="property">
             </app-static-property>
