--- a/ui/src/app/core-ui/static-properties/static-group/static-group.component.html
+++ b/ui/src/app/core-ui/static-properties/static-group/static-group.component.html
@@ -17,15 +17,15 @@
   -->
 
 <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
-    <app-static-property *ngFor="let property of staticProperty.staticProperties"
+    <app-static-property *ngFor="let property of staticProperty.staticProperties; let i = index"
                          [adapterId]="adapterId"
                          [parentForm]="parentForm"
                          [staticProperties]="staticProperties"
-                         [fieldName]="property.internalName"
+                         [fieldName]="fieldName + '-'  + property.internalName + '-' + i"
+                         [showBorder]="false"
                          [eventSchemas]="eventSchemas"
                          [staticProperty]="property"
-                         [displayRecommended]="displayRecommended"
-                         (validateEmitter)="valueChange($event)" class="test fullWidth">
+                         [displayRecommended]="displayRecommended" class="test fullWidth">
     </app-static-property>
 </div>
 
@@ -37,10 +37,11 @@
                 [adapterId]="adapterId"
                 [parentForm]="parentForm"
                 [staticProperties]="staticProperties"
-                [fieldName]="property.internalName"
+                [showBorder]="false"
+                [fieldName]="fieldName + '-' + property.internalName + '-' + i"
                 [eventSchemas]="eventSchemas"
                 [staticProperty]="property"
-                (validateEmitter)="valueChange($event)" class="test fullWidth">
+                [displayRecommended]="displayRecommended" class="test fullWidth">
         </app-static-property>
     </ng-container>
 
