--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -19,6 +19,9 @@
 <div style="height:100%;">
     <div class="box">
         <div class="assemblyOptions sp-blue-bg m-0 row header h-40" *ngIf="editMode">
+            <div fxFlex="100" layout="row" fxLayoutAlign="start center">
+               {{this.configuredWidget.dataLakeMeasure.measureName}}
+            </div>
             <div fxFlex="100" layout="row" fxLayoutAlign="end center">
                 <button mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()" color="white">
                     <i class="material-icons">get_app</i>
