[hotfix] adjust size of setup window

--- a/ui/src/app/login/components/setup/setup.component.html
+++ b/ui/src/app/login/components/setup/setup.component.html
@@ -22,9 +22,8 @@
             <form #setupForm="ngForm" fxFlex="100" fxLayout="column">
                 <div class="setup-header p-20">
                     <img class="sp-logo" alt="icon" src="../../../../assets/img/login/logo.png">
-                    <h1 class="text-center">Welcome!</h1>
-                    <h4 class="text-center">The setup of the system might take a minute. Create a user and you are ready to
-                        go!</h4>
+                    <h2 class="text-center">Welcome to Apache StreamPipes!</h2>
+                    <span class="text-center">Create a user and you are ready to go (the initial setup might take some time)</span>
                 </div>
                 <div fxFlex="100" fxLayout="column" *ngIf="!installationRunning" >
                         <div class="setup-inline-content">
