--- a/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
+++ b/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
@@ -17,8 +17,9 @@
   -->
 
 <div *ngIf="currentMouseOverElement==pipelineElement.payload.dom" class="sp-fade-options">
-    <span class="options-button customize-button" *ngIf="pipelineElement.type!='stream'" style="z-index:10">
-        <button mat-button mat-icon-button matTooltip="Configure Element" [matTooltipPosition]="'above'"
+    <span class="options-button customize-button" *ngIf="pipelineElement.type!='stream' && pipelineElement.settings.completed" style="z-index:10">
+        <button mat-button mat-icon-button matTooltip="Configure Element"
+                [matTooltipPosition]="'above'"
                 (click)="customizeElement(pipelineElement)">
             <i class="material-icons">settings</i>
             </button>
