[STREAMPIPES-220] Add builder method for requiredFloatParameters, fix render issue in mat-slider

--- a/ui/src/app/core-ui/static-properties/static-free-input/static-free-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-free-input/static-free-input.component.html
@@ -35,7 +35,8 @@
             <mat-slider thumbLabel formControlName="{{fieldName}}"
                     [max]="staticProperty.valueSpecification.maxValue"
                     [min]="staticProperty.valueSpecification.minValue"
-                    [step]="staticProperty.valueSpecification.step">
+                    [step]="staticProperty.valueSpecification.step"
+                    [displayWith]="formatLabel">
             </mat-slider>
         </div>
     </div>
