Move line chart labeling to data explorer module

--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -70,7 +70,9 @@
                      [layout]="graph.layout"
                      [config]="graph.config"
                      (relayout)="handleDefaultModeBarButtonClicks($event)"
-                     (selecting)="selectDataPoints($event)">
+                     (selecting)="selectDataPoints($event)"
+                     (plotly_click)="test($event)">
+
         </plotly-plot>
     </div>
 </div>
